--- a/src/index.html
+++ b/src/index.html
@@ -1,7 +1,11 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat+Alternates">
+  <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat+Alternates" media="print">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1">
+  <meta name="description" content="Simplify your life">
+  <script src="https://www.google.com/recaptcha/api.js" async defer></script>
   <title>lagom</title>
 </head>
 <body>
